--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,8 +96,8 @@ target_include_directories(nlohmann_json INTERFACE ${JSON_DIR}/include)
 # ============================================
 # Main Executable
 # ============================================
-file(GLOB_RECURSE SOURCES "src/*.cpp")
-file(GLOB_RECURSE HEADERS "include/*.h")
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/Core/*.cpp")
+file(GLOB_RECURSE HEADERS "include/*.h" "include/Core/*.h")
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
